<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/orangeBox"
            android:gravity="center"
            android:text="@string/txtBox1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="14dp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/greenBox"
            android:gravity="center"
            android:text="@string/txtBox2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="14dp"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@color/blueBox"
            android:gravity="center"
            android:text="@string/txtBox3"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="14dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/txtBtn1"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:backgroundTint="#79cbc6"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_baseline_palette_24"
            />


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/txtBtn2"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:backgroundTint="#a2c99a"
            />
    </LinearLayout>



    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="#fcca59">


        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:hint="@string/etxt1"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/black"
        />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
            android:hint="@string/etxt2"
        android:backgroundTint="@color/black"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#79cbc6">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="Notify me :)"
            android:textSize="16dp" />

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Auto backup"
            android:textSize="16dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
             />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#32000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#79cbc6">
    <RatingBar
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="4"
        android:stepSize="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#32000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#79cbc6">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtYes" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNo" />
    </RadioGroup>

    </LinearLayout>

</LinearLayout>